--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.8.1",
     "swagger-ui-express": "^4.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
