--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.8.1",
+    "node-cron": "^3.0.2",
+    "razorpay": "^2.8.4",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
